# Stock-Prediction-Deep-Leaning

./: .env  .gitignore  feature_engineering.ipynb  feature_engineering.py  format.md  preprocessing.py  pyproject.toml
data/metrics/: classification_model_20250226_171713_epoch_1_metrics.json  classification_model_20250226_171713_epoch_2_metrics.json  classification_model_20250226_171713_epoch_3_metrics.json  classification_model_20250226_171713_interrupted_metrics.json  classification_model_20250226_175201_epoch_10_metrics.json  classification_model_20250226_175201_epoch_1_metrics.json  classification_model_20250226_175201_epoch_2_metrics.json  classification_model_20250226_175201_epoch_3_metrics.json  classification_model_20250226_175201_epoch_4_metrics.json  classification_model_20250226_175201_epoch_5_metrics.json  classification_model_20250226_175201_epoch_6_metrics.json  classification_model_20250226_175201_epoch_7_metrics.json  classification_model_20250226_175201_epoch_8_metrics.json  classification_model_20250226_175201_epoch_9_metrics.json  classification_model_20250226_175201_interrupted_metrics.json  classification_model_20250226_231127_epoch_1_metrics.json  classification_model_20250226_231208_interrupted_metrics.json  classification_model_20250226_231905_epoch_1_metrics.json  classification_model_20250226_231905_epoch_2_metrics.json  classification_model_20250226_231905_interrupted_metrics.json
data/plots/: metrics_summary_20250226_171713.txt  metrics_summary_20250226_175201.txt
scripts/: onnx_to_sft.py
testing/: classification_tf.ipynb  classification_tf.py  classification_tf_viz.py  classification_torch.py  deeplob.ipynb  deeplob_preprocessing.py  dl_series_generators.py  regression_tf.py  tf_preprocessing.py
tests/: test_env.py  test_gpu.py
weights/: weight_analysis.ipynb
