[project]
name = "stock-prediction-deep-leaning"
version = "0.1.0"
description = "Stock Prediction Deep Learning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "jupyter>=1.1.1",
    "jupytext>=1.16.7",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "tensorflow>=2.18.0",
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {} # "QR1" = "models/QR1/", "QR2" = "models/QR2/"
packages = [] # ["QR1", "QR2"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
